@@ -1,3 +1,10 @@
+2008-04-16  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rb_cairo_surface.c: fix unbelievable typos.
+	Reported by kimura wataru. Thanks!!!
+
+	* README: update an entry for kimura wataru.
+
 2008-04-11  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo.c: 1.6.0 -> 1.7.0.
